Make project locally runnable on JDK 8 and prepare for refactoring